updated schemas to include uid

--- a/src/schemas/film_lead_project.json
+++ b/src/schemas/film_lead_project.json
@@ -1,5 +1,11 @@
 {
   "Main": {
+    "uid": {
+      "type": "UID",
+      "config": {
+        "label": "slug"
+      }
+    },
     "video_carousel": {
       "type": "Group",
       "config": {
