--- a/src/schemas/project.json
+++ b/src/schemas/project.json
@@ -1,5 +1,11 @@
 {
   "Main": {
+    "uid": {
+      "type": "UID",
+      "config": {
+        "label": "slug"
+      }
+    },
     "body": {
       "type": "Slices",
       "fieldset": "Slice zone",
