--- a/src/schemas/project.json
+++ b/src/schemas/project.json
@@ -241,6 +241,13 @@
                   "select": null
                 }
               },
+              "sml_video": {
+                "type": "Link",
+                "config": {
+                  "select": "media",
+                  "label": "Sml Video"
+                }
+              },
               "index_image": {
                 "type": "Image",
                 "config": {
