preview img index

--- a/src/schemas/film_lead_project.json
+++ b/src/schemas/film_lead_project.json
@@ -48,6 +48,14 @@
         "label": "Homepage Intro"
       }
     },
+    "index_preview_img": {
+      "type": "Image",
+      "config": {
+        "constraint": {},
+        "thumbnails": [],
+        "label": "Index Preview Img"
+      }
+    },
     "body": {
       "type": "Slices",
       "fieldset": "Slice zone",
