--- a/src/schemas/project.json
+++ b/src/schemas/project.json
@@ -50,6 +50,14 @@
         "label": "Homepage Intro"
       }
     },
+    "index_preview_img": {
+      "type": "Image",
+      "config": {
+        "constraint": {},
+        "thumbnails": [],
+        "label": "Index Preview Img"
+      }
+    },
     "body": {
       "type": "Slices",
       "fieldset": "Slice zone",
