remove loading stuff for test

--- a/src/schemas/project.json
+++ b/src/schemas/project.json
@@ -42,6 +42,13 @@
         "label": "Team"
       }
     },
+    "sector": {
+      "type": "StructuredText",
+      "config": {
+        "single": "paragraph",
+        "label": "Sector"
+      }
+    },
     "homepage_intro": {
       "type": "StructuredText",
       "config": {
