20231208 added video with play button module to square project pages

--- a/src/schemas/project.json
+++ b/src/schemas/project.json
@@ -202,6 +202,13 @@
                   "label": "Video With Play Button"
                 }
               },
+              "small_video_with_play_button": {
+                "type": "Link",
+                "config": {
+                  "select": "media",
+                  "label": "Small Video With Play Button"
+                }
+              },
               "video_thumbnail": {
                 "type": "Image",
                 "config": {
@@ -302,6 +309,13 @@
                 "config": {
                   "select": "media",
                   "label": "Video With Play Button"
+                }
+              },
+              "small_video_with_play_button": {
+                "type": "Link",
+                "config": {
+                  "select": "media",
+                  "label": "Small Video With Play Button"
                 }
               },
               "video_thumbnail": {
