20231212 15:18 option client info on index

--- a/src/schemas/film_lead_project.json
+++ b/src/schemas/film_lead_project.json
@@ -27,6 +27,13 @@
         "label": "Client"
       }
     },
+    "show_client_on_index": {
+      "type": "Boolean",
+      "config": {
+        "default_value": false,
+        "label": "Show Client on Index"
+      }
+    },
     "year": {
       "type": "StructuredText",
       "config": {
