--- a/src/schemas/project_desktop.json
+++ b/src/schemas/project_desktop.json
@@ -400,7 +400,7 @@
               "caption": {
                 "type": "StructuredText",
                 "config": {
-                  "multi": "paragraph,hyperlink",
+                  "multi": "paragraph, hyperlink",
                   "allowTargetBlank": true,
                   "label": "Caption"
                 }
@@ -503,6 +503,86 @@
                   "multi": "paragraph,strong,em,hyperlink,list-item,o-list-item",
                   "allowTargetBlank": true,
                   "label": "Text"
+                }
+              },
+              "row_margin_top": {
+                "type": "Select",
+                "config": {
+                  "options": ["120px", "0px"],
+                  "default_value": "120px",
+                  "label": "Row Margin Top"
+                }
+              }
+            },
+            "repeat": {}
+          },
+          "video": {
+            "type": "Slice",
+            "fieldset": "Square Autoplay Video",
+            "description": "Square Autoplay Video",
+            "icon": "add_box",
+            "display": "list",
+            "non-repeat": {
+              "video": {
+                "type": "Link",
+                "config": {
+                  "label": "Video",
+                  "select": null
+                }
+              },
+              "sml_video": {
+                "type": "Link",
+                "config": {
+                  "select": "media",
+                  "label": "Sml Video"
+                }
+              },
+              "index_image": {
+                "type": "Image",
+                "config": {
+                  "constraint": {},
+                  "thumbnails": [],
+                  "label": "Index Image"
+                }
+              },
+              "column_width": {
+                "type": "Select",
+                "config": {
+                  "options": ["8", "4"],
+                  "default_value": "8",
+                  "label": "Column Width"
+                }
+              },
+              "column_start": {
+                "type": "Select",
+                "config": {
+                  "options": ["0", "4", "8", "12"],
+                  "default_value": "0",
+                  "label": "Column Start"
+                }
+              },
+              "margin_top": {
+                "type": "Select",
+                "config": {
+                  "options": ["0vw", "12.5vw", "25vw"],
+                  "default_value": "0vw",
+                  "label": "Margin Top"
+                }
+              },
+              "caption": {
+                "type": "StructuredText",
+                "config": {
+                  "multi": "paragraph, hyperlink",
+                  "allowTargetBlank": true,
+                  "label": "Caption"
+                }
+              },
+              "caption_size": {
+                "type": "Select",
+                "config": {
+                  "options": ["12px", "16px"],
+                  "default_value": "12px",
+                  "label": "Caption Size"
                 }
               },
               "row_margin_top": {
