--- a/src/schemas/project_desktop.json
+++ b/src/schemas/project_desktop.json
@@ -356,7 +356,7 @@
       "type": "Slices",
       "fieldset": "Slice zone",
       "config": {
-        "labels": {},
+        "labels": null,
         "choices": {
           "image": {
             "type": "Slice",
@@ -400,7 +400,7 @@
               "caption": {
                 "type": "StructuredText",
                 "config": {
-                  "multi": "paragraph, hyperlink",
+                  "multi": "paragraph,hyperlink",
                   "allowTargetBlank": true,
                   "label": "Caption"
                 }
@@ -572,7 +572,7 @@
               "caption": {
                 "type": "StructuredText",
                 "config": {
-                  "multi": "paragraph, hyperlink",
+                  "multi": "paragraph,hyperlink",
                   "allowTargetBlank": true,
                   "label": "Caption"
                 }
@@ -583,6 +583,86 @@
                   "options": ["12px", "16px"],
                   "default_value": "12px",
                   "label": "Caption Size"
+                }
+              },
+              "row_margin_top": {
+                "type": "Select",
+                "config": {
+                  "options": ["120px", "0px"],
+                  "default_value": "120px",
+                  "label": "Row Margin Top"
+                }
+              }
+            },
+            "repeat": {}
+          },
+          "full_bleed_video": {
+            "type": "Slice",
+            "fieldset": "Full Bleed Video",
+            "description": "Full Bleed Video",
+            "icon": "add_box",
+            "display": "list",
+            "non-repeat": {
+              "video": {
+                "type": "Link",
+                "config": {
+                  "select": "media",
+                  "label": "Video"
+                }
+              },
+              "small_video": {
+                "type": "Link",
+                "config": {
+                  "select": "media",
+                  "label": "Small Video"
+                }
+              },
+              "poster_image": {
+                "type": "Image",
+                "config": {
+                  "constraint": {},
+                  "thumbnails": [],
+                  "label": "Poster Image"
+                }
+              },
+              "column_width": {
+                "type": "Select",
+                "config": {
+                  "options": ["16", "8", "4"],
+                  "default_value": "16",
+                  "label": "Column Width"
+                }
+              },
+              "column_start": {
+                "type": "Select",
+                "config": {
+                  "options": ["0", "4", "8", "12"],
+                  "default_value": "0",
+                  "label": "Column Start"
+                }
+              },
+              "margin_top": {
+                "type": "Select",
+                "config": {
+                  "options": ["0vw", "12.5vw", "25vw"],
+                  "default_value": "0vw",
+                  "label": "Margin Top"
+                }
+              },
+              "caption": {
+                "type": "StructuredText",
+                "config": {
+                  "multi": "paragraph, hyperlink",
+                  "allowTargetBlank": true,
+                  "label": "Caption"
+                }
+              },
+              "caption_font_size": {
+                "type": "Select",
+                "config": {
+                  "options": ["12px", "16px"],
+                  "default_value": "12px",
+                  "label": "Caption Font Size"
                 }
               },
               "row_margin_top": {
