--- a/src/schemas/project_desktop.json
+++ b/src/schemas/project_desktop.json
@@ -686,7 +686,8 @@
               "video": {
                 "type": "Link",
                 "config": {
-                  "label": "Video"
+                  "label": "Video",
+                  "select": null
                 }
               },
               "poster_image": {
@@ -707,17 +708,17 @@
               "caption": {
                 "type": "StructuredText",
                 "config": {
-                  "multi": "paragraph, hyperlink",
+                  "multi": "paragraph,hyperlink",
                   "allowTargetBlank": true,
                   "label": "Caption"
                 }
               },
-              "caption_fonts_size": {
+              "caption_font_size": {
                 "type": "Select",
                 "config": {
                   "options": ["12px", "16px"],
                   "default_value": "12px",
-                  "label": "Caption Fonts Size"
+                  "label": "Caption Font Size"
                 }
               },
               "row_margin_top": {
