--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-responsive-carousel": "^3.2.18",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-scroll": "^1.9.0",
     "react-scrollspy": "^3.4.3",
     "react-use": "^17.4.0",
     "screenfull": "^6.0.1",
