full bleed json for black films module video

--- a/src/schemas/film_lead_project.json
+++ b/src/schemas/film_lead_project.json
@@ -120,6 +120,13 @@
                   "thumbnails": [],
                   "label": "Video Thumbnail"
                 }
+              },
+              "full_bleed": {
+                "type": "Boolean",
+                "config": {
+                  "default_value": false,
+                  "label": "Full Bleed"
+                }
               }
             },
             "repeat": {}
